--- a/portfolio/scss/_general.scss
+++ b/portfolio/scss/_general.scss
@@ -84,7 +84,7 @@ body {
 
     @media (max-width: $breakpoint-tablet) {
       max-width: 364px;
-      margin-bottom: 60px;
+      margin-bottom: 50px;
       line-height: 80px;
     }
 
