--- a/portfolio/scss/_portfolio.scss
+++ b/portfolio/scss/_portfolio.scss
@@ -1,3 +1,5 @@
+@use "variables" as *;
+
 .portfolio {
   &__tabs {
     display: flex;
@@ -7,6 +9,10 @@
     margin-bottom: 60px;
     padding: 0;
     list-style: none;
+
+    @media (max-width: $breakpoint-tablet) {
+      flex-wrap: wrap;
+    }
   }
 
   &__tab-pane {
